--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
     "react": "https://esm.sh/react@^19.2.3",
     "react-router-dom": "https://esm.sh/react-router-dom@^7.12.0",
     "vite": "https://esm.sh/vite@^7.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "fs": "https://esm.sh/fs@^0.0.1-security",
+    "ws": "https://esm.sh/ws@^8.19.0",
+    "sqlite3": "https://esm.sh/sqlite3@^5.1.7"
   }
 }
 </script>
